--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-toastify": "^9.1.1",
     "typescript": "4.8.4"
   }
